initiating comment model and base css for the kanban board

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,13 @@
-<div class="board">
-    <div class="block" id="bucketlist">
-        <h1>Bucketlist</h1>
-    </div>
-    <div class="block" id="visiting">
-        <h1>Visiting</h1>
-    </div>
-    <div class="block" id="visited">
-        <h1>Visited</h1>
+<div class="container">
+    <div class="board">
+        <div class="block" id="bucketlist">
+            <h1>Bucketlist</h1>
+        </div>
+        <div class="block" id="visiting">
+            <h1>Visiting</h1>
+        </div>
+        <div class="block" id="visited">
+            <h1>Visited</h1>
+        </div>
     </div>
 </div>
-
-
-!-- bucketlist, visiting, visited --!
