--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,4 +7,30 @@
     flex-direction: column;
 }
 
+.board {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.block {
+    padding: 0.6rem;
+    width: 30.5%;
+    min-width: 14rem;
+    min-height: 4.5rem;
+    border-radius: 0.5rem;
+}
+
+#bucketlist {
+    background-color: #999B84;
+}
+
+#visiting {
+    background-color: #EFD9D1;
+}
+
+#visited {
+    background-color: #3D5361;
+}
+
 /* end of kanban board css */
