updated sass files

--- a/public/sass/user.sass
+++ b/public/sass/user.sass
@@ -1,5 +1,5 @@
-@use 'index'
+@use 'style'
 
 .inverse
-  background-color: index.$primary-color
+  background-color: style.$primary-color
   color: white
