--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,3 +31,6 @@
     <button type='submit'>Signup</button>
   </div>
 </form>
+
+<!-- Add public/javascript pages -->
+<script src='/javascript/login.js'></script>
