--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,9 @@
+<head>
+  <link rel='stylesheet' href='/stylesheets/login.css' />
+</head>
+
 <!--LOGIN FORM -->
-<form>
+<form class="login-form">
   <div>
     <label for='email-login'>Email:</label>
     <input type='text' id='email-login' />
