--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -1,6 +1,60 @@
-$font-stack: Helvetica, sans-serif
-$primary-color: #333
+/* BASE REUSABLE STYLESHEET */
 
-body
-  font: 100% $font-stack
-  color: $primary-color
+// Colors 
+$dark-blue: #225ca3
+$red: #ea0028
+$white: #ffffff
+$pink: #fA8Bff
+$sky-blue: #2bd2ff
+$light-green: #2bff88
+$light-orange: #ff9a8b
+$purple: #0000cc
+$pink: #ff3399
+
+
+h1
+  background-color: $pink
+  background-image: linear-gradient(to bottom, #0000cc 0%, #ff3399 100%)
+  color: $white
+  transition: all .5s ease-out
+  background-size: 1px 100px
+  background-position: 0 -10px
+  padding: 2vh
+
+a 
+  text-decoration: none
+  font-weight: bold
+  color: $dark-blue
+  transition: color 0.1s
+  &:hover 
+    font-weight: bold
+    color: $red
+
+label
+ font-weight: bold
+
+button
+  border: 0
+  padding: 1%
+  font-weight: bold
+  curser: pointer
+  border-radius: 5px
+
+.btn-login, btn-save, btn-add
+  background-color: $pink
+  background-image: linear-gradient(45deg, $pink 0%, $sky-blue 52%, $light-green 90%)
+  transition: all .5s ease-out
+  background-size: 1px 100px
+  background-position: 0 -10px
+
+.btn-delete 
+  background-color: #EA0028
+  background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
+  transition: all .5s ease-out
+  background-size: 1px 100px
+  background-position: 0 -10px
+
+
+footer
+  font-weight: bold
+  
