made transition colors for login, add and delete buttons

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -46,6 +46,9 @@ button
   transition: all .5s ease-out
   background-size: 1px 100px
   background-position: 0 -10px
+  &:hover
+    background-position: 1px -50px
+    color: $white
 
 .btn-delete 
   background-color: #EA0028
@@ -53,7 +56,6 @@ button
   transition: all .5s ease-out
   background-size: 1px 100px
   background-position: 0 -10px
-
 
 footer
   font-weight: bold
