--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,6 +39,10 @@ button {
   background-size: 1px 100px;
   background-position: 0 -10px;
 }
+.btn-login:hover, btn-save:hover, btn-add:hover {
+  background-position: 1px -50px;
+  color: #ffffff;
+}
 
 .btn-delete {
   background-color: #EA0028;
