--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
     <input type='password' id='password-login' />
   </div>
   <div>
-    <button type='submit'>Login</button>
+    <button class="btn-login" type='submit'>Login</button>
   </div>
 </form>
 
@@ -32,7 +32,7 @@
     <input type='password' id='password-signup' />
   </div>
   <div>
-    <button type='submit'>Signup</button>
+    <button class="btn-login" type='submit'>Signup</button>
   </div>
 </form>
 
