--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -39,6 +39,10 @@ button {
   background-size: 1px 100px;
   background-position: 0 -10px;
 }
+.btn-login:hover, btn-save:hover, btn-add:hover {
+  background-position: 1px -50px;
+  color: #ffffff;
+}
 
 .btn-delete {
   background-color: #EA0028;
@@ -59,18 +63,6 @@ body {
   background-postition: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-button {
-  background-color: #fA8Bff;
-  background-image: linear-gradient(45deg, #fA8Bff 0%, #2bd2ff 52%, #2bff88 90%);
-  transition: all 0.5s ease-out;
-  background-size: 1px 100px;
-  background-position: 0 -10px;
-}
-button:hover {
-  background-position: 1px -50px;
-  color: #ffffff;
 }
 
 /*# sourceMappingURL=login.css.map */
