--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Travel Lovers</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <!-- Link Bulma CSS -->
+    <link
+      rel='stylesheet'
+      href='https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css'
+    />
   </head>
 
   <body>
