--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,39 +2,41 @@
   <link rel='stylesheet' href='/stylesheets/login.css' />
 </head>
 
-<!--LOGIN FORM -->
-<form class="login-form">
-  <div>
-    <label for='email-login'>Email:</label>
-    <input type='text' id='email-login' />
-  </div>
-  <div>
-    <label for='password-login'>Password:</label>
-    <input type='password' id='password-login' />
-  </div>
-  <div>
-    <button class="btn-login" type='submit'>Login</button>
-  </div>
-</form>
+<div class='is-flex-direction-row'>
+  <!--LOGIN FORM -->
+  <form class='login-form'>
+    <div>
+      <label for='email-login'>Email:</label>
+      <input type='text' id='email-login' />
+    </div>
+    <div>
+      <label for='password-login'>Password:</label>
+      <input type='password' id='password-login' />
+    </div>
+    <div>
+      <button class='btn-login' type='submit'>Login</button>
+    </div>
+  </form>
 
-<!--SIGNUP FORM -->
-<form class='signup-form'>
-  <div>
-    <label for='username-signup'>Username:</label>
-    <input type='text' id='username-signup' />
-  </div>
-  <div>
-    <label for='email-signup'>Email:</label>
-    <input type='text' id='email-signup' />
-  </div>
-  <div>
-    <label for='password-signup'>Password:</label>
-    <input type='password' id='password-signup' />
-  </div>
-  <div>
-    <button class="btn-login" type='submit'>Signup</button>
-  </div>
-</form>
+  <!--SIGNUP FORM -->
+  <form class='signup-form'>
+    <div>
+      <label for='username-signup'>Username:</label>
+      <input type='text' id='username-signup' />
+    </div>
+    <div>
+      <label for='email-signup'>Email:</label>
+      <input type='text' id='email-signup' />
+    </div>
+    <div>
+      <label for='password-signup'>Password:</label>
+      <input type='password' id='password-signup' />
+    </div>
+    <div>
+      <button class='btn-login' type='submit'>Signup</button>
+    </div>
+  </form>
+</div>
 
 <!-- Add public/javascript pages -->
 <script src='/javascript/login.js'></script>
