--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel=App</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  {{!-- <link rel="stylesheet" href="/stylesheets/style.css"> --}}
 </head>
 
 <body>
