--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -4,12 +4,11 @@
 // Image folder path
 $assetPath: "/assets/images"
 
-body 
+html, body 
   margin: 0 auto
   background: url(#{$assetPath}/airplane-taking-off.jpg)
   background-postition: center
   background-repeat: no-repeat
   background-size: cover
 
- 
 
