--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -11,6 +11,11 @@ $light-orange: #ff9a8b
 $purple: #0000cc
 $pink: #ff3399
 
+.wrapper 
+  width: 100%
+  min-height: 100%
+  max-width: 1200px
+  margin: 0 auto
 
 h1
   background-color: $pink
@@ -20,6 +25,10 @@ h1
   background-size: 1px 100px
   background-position: 0 -10px
   padding: 2vh
+  min-width: 100vw
+
+h1, nav 
+  display: inline-block
 
 a 
   text-decoration: none
@@ -50,13 +59,14 @@ button
     background-position: 1px -50px
     color: $white
 
-.btn-delete 
+.btn-delete, footer
   background-color: #EA0028
   background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
   transition: all .5s ease-out
-  background-size: 1px 100px
   background-position: 0 -10px
 
 footer
   font-weight: bold
+  height: 10vh
+
   
