--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,11 @@
 /* BASE REUSABLE STYLESHEET */
+.wrapper {
+  width: 100%;
+  min-height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 h1 {
   background-color: #ff3399;
   background-image: linear-gradient(to bottom, #0000cc 0%, #ff3399 100%);
@@ -7,6 +14,11 @@ h1 {
   background-size: 1px 100px;
   background-position: 0 -10px;
   padding: 2vh;
+  min-width: 100vw;
+}
+
+h1, nav {
+  display: inline-block;
 }
 
 a {
@@ -44,16 +56,16 @@ button {
   color: #ffffff;
 }
 
-.btn-delete {
+.btn-delete, footer {
   background-color: #EA0028;
   background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
   transition: all 0.5s ease-out;
-  background-size: 1px 100px;
   background-position: 0 -10px;
 }
 
 footer {
   font-weight: bold;
+  height: 10vh;
 }
 
 /*# sourceMappingURL=style.css.map */
