--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -17,7 +17,7 @@ $pink: #ff3399
   max-width: 1200px
   margin: 0 auto
 
-h1
+nav
   background-color: $pink
   background-image: linear-gradient(to bottom, #0000cc 0%, #ff3399 100%)
   color: $white
@@ -49,7 +49,7 @@ button
   curser: pointer
   border-radius: 5px
 
-.btn-login, btn-save, btn-add
+.btn-login, .btn-save, .btn-add, .btn-homepage
   background-color: $pink
   background-image: linear-gradient(45deg, $pink 0%, $sky-blue 52%, $light-green 90%)
   transition: all .5s ease-out
@@ -57,16 +57,23 @@ button
   background-position: 0 -10px
   &:hover
     background-position: 1px -50px
-    color: $white
 
-.btn-delete, footer
-  background-color: #EA0028
+.btn-delete, .btn-logout
+  background-color: $red
   background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
   transition: all .5s ease-out
+  background-size: 1px 100px
   background-position: 0 -10px
+  &:hover
+    background-position: 1px -50px
+    color: $white
+
 
 footer
   font-weight: bold
-  height: 10vh
+  height: 2vh
+  background-color: $red
+  background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
+  background-size: 1px 50vw
 
   
