--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 
-h1 {
+nav {
   background-color: #ff3399;
   background-image: linear-gradient(to bottom, #0000cc 0%, #ff3399 100%);
   color: #ffffff;
@@ -44,28 +44,35 @@ button {
   border-radius: 5px;
 }
 
-.btn-login, btn-save, btn-add {
+.btn-login, .btn-save, .btn-add, .btn-homepage {
   background-color: #ff3399;
   background-image: linear-gradient(45deg, #ff3399 0%, #2bd2ff 52%, #2bff88 90%);
   transition: all 0.5s ease-out;
   background-size: 1px 100px;
   background-position: 0 -10px;
 }
-.btn-login:hover, btn-save:hover, btn-add:hover {
+.btn-login:hover, .btn-save:hover, .btn-add:hover, .btn-homepage:hover {
+  background-position: 1px -50px;
+}
+
+.btn-delete, .btn-logout {
+  background-color: #ea0028;
+  background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
+  transition: all 0.5s ease-out;
+  background-size: 1px 100px;
+  background-position: 0 -10px;
+}
+.btn-delete:hover, .btn-logout:hover {
   background-position: 1px -50px;
   color: #ffffff;
 }
 
-.btn-delete, footer {
-  background-color: #EA0028;
-  background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
-  transition: all 0.5s ease-out;
-  background-position: 0 -10px;
-}
-
 footer {
   font-weight: bold;
-  height: 10vh;
+  height: 2vh;
+  background-color: #ea0028;
+  background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
+  background-size: 1px 50vw;
 }
 
 /*# sourceMappingURL=style.css.map */
