made navbar more responsive

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -17,12 +17,16 @@ $pink: #ff3399
   max-width: 1200px
   margin: 0 auto
 
+#error-message
+  color: $sky-blue
+  font-weight: bold
+
 nav
   background-color: $pink
   background-image: linear-gradient(to bottom, #0000cc 0%, #ff3399 100%)
   color: $white
   transition: all .5s ease-out
-  background-size: 1px 100px
+  background-size: 1px 150px
   background-position: 0 -10px
   padding: 2vh
   min-width: 100vw
@@ -53,7 +57,7 @@ button
   background-color: $pink
   background-image: linear-gradient(45deg, $pink 0%, $sky-blue 52%, $light-green 90%)
   transition: all .5s ease-out
-  background-size: 1px 100px
+  background-size: 1px 150px
   background-position: 0 -10px
   &:hover
     background-position: 1px -50px
@@ -62,7 +66,7 @@ button
   background-color: $red
   background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
   transition: all .5s ease-out
-  background-size: 1px 100px
+  background-size: 1px 150px
   background-position: 0 -10px
   &:hover
     background-position: 1px -50px
