--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,12 +6,17 @@
   margin: 0 auto;
 }
 
+#error-message {
+  color: #2bd2ff;
+  font-weight: bold;
+}
+
 nav {
   background-color: #ff3399;
   background-image: linear-gradient(to bottom, #0000cc 0%, #ff3399 100%);
   color: #ffffff;
   transition: all 0.5s ease-out;
-  background-size: 1px 100px;
+  background-size: 1px 150px;
   background-position: 0 -10px;
   padding: 2vh;
   min-width: 100vw;
@@ -48,7 +53,7 @@ button {
   background-color: #ff3399;
   background-image: linear-gradient(45deg, #ff3399 0%, #2bd2ff 52%, #2bff88 90%);
   transition: all 0.5s ease-out;
-  background-size: 1px 100px;
+  background-size: 1px 150px;
   background-position: 0 -10px;
 }
 .btn-login:hover, .btn-save:hover, .btn-add:hover, .btn-homepage:hover {
@@ -59,7 +64,7 @@ button {
   background-color: #ea0028;
   background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
   transition: all 0.5s ease-out;
-  background-size: 1px 100px;
+  background-size: 1px 150px;
   background-position: 0 -10px;
 }
 .btn-delete:hover, .btn-logout:hover {
