--- a/views/bucket-list.handlebars
+++ b/views/bucket-list.handlebars
@@ -1,3 +1,12 @@
-<div class="container">
+<section>
+  <a href='/bucket-list'>
+    <div>
+      {{#each places}}
+        <div>
+          City {{city}}
+        </div>
+      {{/each}}
+    </div>
+  </a>
 
-</div>
+</section>
