--- a/views/bucket-list.handlebars
+++ b/views/bucket-list.handlebars
@@ -3,7 +3,8 @@
     <div>
       {{#each places}}
         <div>
-          City {{city}}
+          City
+          {{city}}
         </div>
       {{/each}}
     </div>
