--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -45,7 +45,7 @@
     <button class='btn-login' type='submit'>Signup</button>
   </div>
 </form>
-<br>
+<br />
 
 <!-- Add public/javascript pages -->
-<script src='/javascript/login.js'></script>
+<script src='javascript/login.js'></script>
