--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -4,7 +4,7 @@
 // Image folder path
 $assetPath: "/assets/images"
 
-html, body 
+html
   margin: 0 auto
   background: url(#{$assetPath}/airplane-taking-off.jpg)
   background-postition: center
