--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,24 +1,24 @@
-<div class="container">
-    <div class="board">
-        <div class="block" id="bucketlist">
-            <h1>Bucketlist</h1>
-        </div>
-        <div class="block" id="visiting">
-            <h1>Visiting</h1>
-        </div>
-        <div class="block" id="visited">
-            <h1>Visited</h1>
-        </div>
-         <div class="block" id="dashboard">
-            <a href="/bucket-list">dashboard</a>
-        </div>
+<div class='container'>
+  <div class='board'>
+    <div class='block' id='bucketlist'>
+      <h1>Bucketlist</h1>
     </div>
-<div>
+    <div class='block' id='visiting'>
+      <h1>Visiting</h1>
+    </div>
+    <div class='block' id='visited'>
+      <h1>Visited</h1>
+    </div>
+    <div class='block' id='dashboard'>
+      <a href='/bucket-list'>Dashboard</a>
+    </div>
+  </div>
+  <div>
     {{#each places}}
-        <div>
-                City {{city}} 
-            </div>
+      <div>
+        City
+        {{city}}
+      </div>
     {{/each}}
+  </div>
 </div>
-</div>
-
