removed some stylesheets in main handlebars to resolve conflict

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel=App</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
+  {{!-- <link rel="stylesheet" href="/stylesheets/style.css"> --}}
+  {{!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css"> --}}
 </head>
 
 <body>
