added bg for homepage view

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,24 +1,3 @@
-<div class='container'>
-  <div class='board'>
-    <div class='block' id='bucketlist'>
-      <h1>Bucketlist</h1>
-    </div>
-    <div class='block' id='visiting'>
-      <h1>Visiting</h1>
-    </div>
-    <div class='block' id='visited'>
-      <h1>Visited</h1>
-    </div>
-    <div class='block' id='dashboard'>
-      <a href='/bucket-list'>Dashboard</a>
-    </div>
-  </div>
-  <div>
-    {{#each places}}
-      <div>
-        City
-        {{city}}
-      </div>
-    {{/each}}
-  </div>
-</div>
+<head>
+  <link rel='stylesheet' href='/stylesheets/homepage.css' />
+</head>
