--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1,3 +1,9 @@
-
+html {
+  margin: 0 auto;
+  background: url(/assets/images/homepagebg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 /*# sourceMappingURL=homepage.css.map */
