--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,27 +1,1 @@
-<html lang='en'>
-
-  <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Travel=App</title>
-    {{! <link rel="stylesheet" href="/stylesheets/style.css"> }}
-  </head>
-
-  <body>
-    <div class='wrapper'>
-      <header>
-        <h1>
-          <a href='/'>Travel-App</a>
-        </h1>
-      </header>
-      <main>
-        {{{body}}}
-      </main>
-      <footer>
-        Thanks for visiting!
-      </footer>
-    </div>
-
-  </body>
-
-</html>
+</div>hello Dashboard</div>
