add bucket-list and dasshboard

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,8 +11,11 @@
         <div class="block" id="visited">
             <h1>Visited</h1>
         </div>
-         <div class="block" id="dashboard">
-            <a href="/bucket-list">dashboard</a>
+         <div class="block" id="bucket-list">
+            <a href="/bucket-list">bucket-list</a>
+        </div>
+        <div class="block" id="dashboard">
+            <a href="/dashboard">dashboard</a>
         </div>
     </div>
 <div>
