--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -20,12 +20,16 @@ body, html
   max-width: 1200px
   margin: 0 auto
 
+h1 
+  font-size: 4vh
+  padding-right: 2vw
+
 nav
   background-color: $pink
-  background-image: linear-gradient(to bottom, #0000cc 0%, #ff3399 100%)
+  background-image: linear-gradient(to bottom, $purple 0%, $pink 100%)
   color: $white
   transition: all .5s ease-out
-  background-size: 1px 100px
+  background-size: 1px 150px
   background-position: 0 -10px
   padding: 2vh
   min-width: 100vw
@@ -52,11 +56,11 @@ button
   curser: pointer
   border-radius: 5px
 
-.btn-login, .btn-save, .btn-add, .btn-homepage
+.btn-nav, .btn-login, .btn-save, .btn-add
   background-color: $pink
   background-image: linear-gradient(45deg, $pink 0%, $sky-blue 52%, $light-green 90%)
   transition: all .5s ease-out
-  background-size: 1px 100px
+  background-size: 1px 130px
   background-position: 0 -10px
   &:hover
     background-position: 1px -50px
@@ -65,7 +69,7 @@ button
   background-color: $red
   background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
   transition: all .5s ease-out
-  background-size: 1px 100px
+  background-size: 1px 150px
   background-position: 0 -10px
   &:hover
     background-position: 1px -50px
@@ -78,6 +82,3 @@ footer
   background-color: $red
   background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
   background-size: 1px 150px
-  position: absolute
-  bottom: 0
-  width: 100%
