feat(homepage): Add image to the homepage

--- a/public/sass/homepage.sass
+++ b/public/sass/homepage.sass
@@ -1,6 +1,4 @@
-html 
-  margin: 0 auto
-  background: url(/assets/images/homepagebg.png)
-  background-position: center
-  background-repeat: no-repeat
-  background-size: cover
+$assetPath: "/assets/images"
+
+html
+    background: url(#{$assetPath}/homepage.jpg)
