--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -44,7 +44,7 @@ button {
   border: 0;
   padding: 1%;
   font-weight: bold;
-  cursor: pointer;
+  curser: pointer;
   border-radius: 5px;
 }
 
@@ -77,7 +77,6 @@ footer {
   background-color: #ea0028;
   background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
   background-size: 1px 150px;
-  position: absolute;
   bottom: 0;
   width: 100%;
 }
@@ -86,7 +85,7 @@ footer {
 html {
   margin: 0 auto;
   background: url(/assets/images/airplane-taking-off.jpg);
-  background-position: center;
+  background-postition: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
