fix(homepage): Fix background image duplication

--- a/public/sass/homepage.sass
+++ b/public/sass/homepage.sass
@@ -1,4 +1,9 @@
+@use 'style'
+
 $assetPath: "/assets/images"
 
 html
     background: url(#{$assetPath}/homepage.jpg)
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
