--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,27 +1,65 @@
-<html lang='en'>
-
-  <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Travel=App</title>
-    {{! <link rel="stylesheet" href="/stylesheets/style.css"> }}
-  </head>
-
-  <body>
-    <div class='wrapper'>
-      <header>
-        <h1>
-          <a href='/'>Travel-App</a>
-        </h1>
-      </header>
-      <main>
-        {{{body}}}
-      </main>
-      <footer>
-        Thanks for visiting!
-      </footer>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>bulma cards</title>
+        <link rel='stylesheet' href='https://unpkg.com/bulma@0.9.0/css/bulma.min.css'>
+    </head>
+    <body>
+<section class="container">
+<div class="level-item">
+<div class="columns is-multiline is-centered cards-container" id="sectioncontainer">
+    <div class="column is-wide">
+        <article class="message is-black">
+            <div class="message-header">
+                <p>Bucketlist</p>
+            </div>
+            <div class="message-body">
+                <input type="text" id="candidate"/>
+                <button onclick="addItem()">Add</button>
+                <button onclick="removeItem()">Remove</button>
+            </div>
+            <div>
+                <ul id="dynamic-list"></ul>
+            </div>
+        </article>
     </div>
+    <div class="column is-wide">
+        <article class="message is-primary">
+            <div class="message-header">
+                <p>Visiting</p>
+            </div>
+            <div class="message-body">
+                <input type="text" id="candidate1"/>
+                <button onclick="addItem1()">Add</button>
+                <button onclick="removeItem1()">Remove</button>
+            </div>
+            <div>
+                <ul id="dynamic-list1"></ul>
+            </div>
+        </article>
+            </div>
+        
+    
+    <div class="column is-wide">
+        <article class="message is-link">
+            <div class="message-header">
+                <p>Visited</p>
+            </div>
 
-  </body>
+            <div class="message-body">
+                <input type="text" id="candidate2"/>
+                <button onclick="addItem2()">Add</button>
+                <button onclick="removeItem2()">Remove</button>
+            </div>
 
+            <div>
+                <ul id="dynamic-list2"></ul>
+            </div>
+        </article>
+    </div>
+    </div>
+</section>
+<script src='./javascript/dashboard.js'></script>
+</body>
 </html>
