--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,6 +19,9 @@
                 <button onclick="addItem()">Add</button>
                 <button onclick="removeItem()">Remove</button>
             </div>
+              <div>
+                <p>Date: <input type="text" id="datepicker"></p>
+              </div>
             <div>
                 <ul id="dynamic-list"></ul>
             </div>
@@ -34,6 +37,9 @@
                 <button onclick="addItem1()">Add</button>
                 <button onclick="removeItem1()">Remove</button>
             </div>
+                <div>
+                  <p>Date: <input type="text" id="datepicker1"></p>
+                </div>
             <div>
                 <ul id="dynamic-list1"></ul>
             </div>
@@ -52,7 +58,9 @@
                 <button onclick="addItem2()">Add</button>
                 <button onclick="removeItem2()">Remove</button>
             </div>
-
+            <div>
+                <p>Date: <input type="text" id="datepicker2"></p>
+            </div>
             <div>
                 <ul id="dynamic-list2"></ul>
             </div>
@@ -60,6 +68,11 @@
     </div>
     </div>
 </section>
+
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 <script src='./javascript/dashboard.js'></script>
+<script src='./javascript/datepicker.js'></script>
+
 </body>
 </html>
