added placeholders to the signup and login forms

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,12 +8,17 @@
   <div>
     <label for='email-login'>Email:</label>
     <br />
-    <input type='text' id='email-login' />
+    <input
+      type='text'
+      id='email-login'
+      placeholder='janedoe@email.com'
+      autofocus='true'
+    />
   </div>
   <div>
     <label for='password-login'>Password:</label>
     <br />
-    <input type='password' id='password-login' />
+    <input type='password' id='password-login' placeholder='YourPassword' />
   </div>
   <br />
   <div>
@@ -28,17 +33,17 @@
   <div>
     <label for='username-signup'>Username:</label>
     <br />
-    <input type='text' id='username-signup' />
+    <input type='text' id='username-signup' placeholder='janedoe' />
   </div>
   <div>
     <label for='email-signup'>Email:</label>
     <br />
-    <input type='text' id='email-signup' />
+    <input type='text' id='email-signup' placeholder='janedoe@gmail.com' />
   </div>
   <div>
     <label for='password-signup'>Password:</label>
     <br />
-    <input type='password' id='password-signup' />
+    <input type='password' id='password-signup' placeholder='YourPassword' />
   </div>
   <br />
   <div>
