--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -37,7 +37,7 @@ nav
 h1, nav
   display: inline-block
 
-a 
+a, button 
   text-decoration: none
   font-weight: bold
   color: $dark-blue
@@ -47,9 +47,9 @@ a
     color: $red
 
 label
- font-weight: bold
+ font-weight: bolder
 
-button
+button, input
   border: 0
   padding: 1%
   font-weight: bold
