styled the navbar buttons

--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -4,11 +4,13 @@
 // Image folder path
 $assetPath: "/assets/images"
 
-html
+body
   margin: 0 auto
   background: url(#{$assetPath}/airplane-taking-off.jpg)
   background-postition: center
   background-repeat: no-repeat
   background-size: cover
+
+
 
 
