--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,7 +22,10 @@
   </div>
   <br />
   <div>
-    <button class='btn-login' type='submit'>Login</button>
+    <button
+      class='btn-login'
+      type='submit'
+    >Login</button>
   </div>
   <br />
   <br />
