--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 /* BASE REUSABLE STYLESHEET */
-body, html {
+html, body {
   min-height: 100%;
 }
 
@@ -62,6 +62,7 @@ button, input {
 }
 .btn-nav:hover, .btn-login:hover, .btn-save:hover, .btn-add:hover {
   background-position: 1px -50px;
+  color: #ea0028;
 }
 
 .btn-delete, .btn-logout {
@@ -74,6 +75,11 @@ button, input {
 .btn-delete:hover, .btn-logout:hover {
   background-position: 1px -50px;
   color: #ffffff;
+}
+
+.btn-nav, .btn-logout {
+  margin-right: 1.5vw;
+  padding: 1vw;
 }
 
 footer {
