--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,28 +14,37 @@
 
   <body>
     <header class='is-flex is-flex-direction-row'>
-      <nav class='is-justify-content-space-evenly'>
-        <a class="navbar-item" href="assets/images/travel-lovers-logo.png"></a>
+      <nav class='navbar' role='navigation' aria-label='main navigation'>
+        <div class='navbar-brand'>
+          <a
+            class='navbar-item'
+            href='assets/images/travel-lovers-logo.png'
+          ></a>
           <img
             alt='Travel Lovers logo'
             src='assets/images/travel-lovers-logo.png'
             width='200'
             height='30'
           />
-        </a>
-        <span class='is-align-items-center'>
-          <a href='/'><button class='btn-nav'>Homepage</button></a>
-          {{#if loggedIn}}
-            <a
-                href='/bucket-list'
-              ><button class='btn-nav'>Dashboard</button></a>
-            <button id='logout' class='btn-logout'>Logout</button>
-            <div id='error-message'></div>
-          {{else}}
-            <a href='/login'><button class='btn-nav'>Login</button></a>
-            <div id='error-message'></div>
-          {{/if}}
-        </span>
+        </div>
+        <div class='navbar-end'>
+          <div class='navbar-item'>
+            <div class='buttons'>
+              <a href='/'><button class='button btn-nav'>Homepage</button></a>
+              {{#if loggedIn}}
+                <a href='/bucket-list'><button
+                    class='btn-nav'
+                  >Dashboard</button></a>
+                <button id='logout' class='button btn-logout'>Logout</button>
+                <div id='error-message'></div>
+              {{else}}
+                <a href='/login'><button class='button btn-nav'>Login</button></a>
+                <div id='error-message'></div>
+              {{/if}}
+            </div>
+          </div>
+        </div>
+
       </nav>
     </header>
     <main class='wrapper is-flex is-flex-direction-column'>
