increased the footer font size

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -81,7 +81,8 @@ button, input
   padding: 1vw
 
 footer
-  font-weight: bold
+  font-weight: bolder
+  font-size: 3vh
   height: 2vh
   background-color: $red
   background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
