--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,8 @@ button, input {
 }
 
 footer {
-  font-weight: bold;
+  font-weight: bolder;
+  font-size: 3vh;
   height: 2vh;
   background-color: #ea0028;
   background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
