added icons to login and navbar buttons

--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -4,12 +4,14 @@
 // Image folder path
 $assetPath: "/assets/images"
 
-body
+main
   margin: 0 auto
   background: url(#{$assetPath}/airplane-taking-off.jpg)
   background-postition: center
   background-repeat: no-repeat
   background-size: cover
+  min-width: 100%
+  
 
 
 
