--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
 
 <!--LOGIN FORM -->
 <br />
-<form class='login-form'>
+<form class='login-form pt-3 pl-6'>
   <div>
     <label for='email-login'>Email:</label>
     <br />
@@ -22,17 +22,16 @@
   </div>
   <br />
   <div>
-    <button
-      class='btn-login'
-      type='submit'
-    >Login</button>
+    <button class='button btn-login' type='submit'><i
+        class='icon-unlock icon-large pr-2'
+      ></i>Login</button>
   </div>
   <br />
   <br />
 </form>
 
 <!--SIGNUP FORM -->
-<form class='signup-form'>
+<form class='signup-form pl-6'>
   <div>
     <label for='username-signup'>Username:</label>
     <br />
@@ -50,7 +49,9 @@
   </div>
   <br />
   <div>
-    <button class='btn-login' type='submit'>Signup</button>
+    <button class='button btn-login' type='submit'><i
+        class='icon-pencil icon-large pr-2'
+      ></i>Signup</button>
   </div>
 </form>
 <br />
