added in copyright to the footer

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -87,3 +87,9 @@ footer
   background-color: $red
   background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
   background-size: 1px 350px
+  position: relative
+
+.copyright
+  position: absolute
+  bottom: 2vw
+  right: 2vw
