--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -89,6 +89,13 @@ footer {
   background-color: #ea0028;
   background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
   background-size: 1px 350px;
+  position: relative;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 2vw;
+  right: 2vw;
 }
 
 /* LOGIN STYLES */
