--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,6 +65,10 @@
       <div class='content has-text-centered'>
         Thanks for visiting!
       </div>
+      <div class='copyright'>
+        <h2>Made by Travel Lovers</h2>
+        <div>&copy; 2022 Travel Lovers, Inc.</div>
+      </div>
     </footer>
 
     {{#if loggedIn}}
