made login labels bolder

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -4,6 +4,7 @@
 $dark-blue: #225ca3
 $red: #ea0028
 $white: #ffffff
+$black: #000000
 $pink: #fA8Bff
 $sky-blue: #2bd2ff
 $light-green: #2bff88
@@ -48,6 +49,7 @@ a, button
 
 label
  font-weight: bolder
+ color: $black
 
 button, input
   border: 0
