used interpoliation to make a more descriptive error message

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -14,7 +14,10 @@ $pink: #ff3399
 
 html, body
   min-height: 100%
-  
+
+#error-message
+  color: white
+
 .wrapper 
   width: 100%
   min-height: 100%
