--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,6 +34,7 @@
         </div>
         <div class='navbar-end'>
           <div class='navbar-item'>
+            <div id='error-message' class='p-5'></div>
             <div class='buttons'>
               <a href='/'><button class='button btn-nav'><i
                     class='icon-home icon-large pr-2'
@@ -45,12 +46,10 @@
                 <button id='logout' class='button btn-logout'><i
                     class='icon-lock icon-large pr-2'
                   ></i>Logout</button>
-                <div id='error-message'></div>
               {{else}}
                 <a href='/login'><button class='button btn-nav'><i
                       class='icon-unlock icon-large pr-2'
                     ></i>Login</button></a>
-                <div id='error-message'></div>
               {{/if}}
             </div>
           </div>
