made the footer more responsive

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,7 +60,7 @@
     <main class='wrapper'>
       {{{body}}}
     </main>
-    <footer class='footer'>
+    <footer class='footer is-size-7-mobile'>
       <div class='content has-text-centered'>
         Thanks for visiting!
       </div>
