--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,11 +60,11 @@
     <main class='wrapper'>
       {{{body}}}
     </main>
-    <footer class='footer is-size-7-mobile'>
+    <footer class='footer is-size-6-mobile'>
       <div class='content has-text-centered'>
         Thanks for visiting!
       </div>
-      <div class='copyright'>
+      <div class='copyright is-size-6-mobile'>
         <h2>Made by Travel Lovers</h2>
         <div>&copy; 2022 Travel Lovers, Inc.</div>
       </div>
