refined style.sass

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -27,6 +27,7 @@ html, body
 h1 
   font-size: 4vh
   padding-right: 2vw
+  display: inline-block
 
 nav
   background-color: $pink
@@ -37,8 +38,6 @@ nav
   background-position: 0 -10px
   padding: 2vh
   min-width: 100vw
-
-h1, nav
   display: inline-block
 
 a, button
