--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -17,6 +17,7 @@ html, body {
 h1 {
   font-size: 4vh;
   padding-right: 2vw;
+  display: inline-block;
 }
 
 nav {
@@ -28,9 +29,6 @@ nav {
   background-position: 0 -10px;
   padding: 2vh;
   min-width: 100vw;
-}
-
-h1, nav {
   display: inline-block;
 }
 
